PRB: Changed H1 problem headings

--- a/2020_21/PRB/H1/week2/homework.tex
+++ b/2020_21/PRB/H1/week2/homework.tex
@@ -39,7 +39,7 @@
 \begin{document}
 \date{6th October 2020}
 \maketitle
-\section*{Problem 1}
+\section*{P 2.1}
 Let $X$ be the number of times that a run of 4 consecutive tosses
 contains an equal number of heads and tails when tossing a coin 99 times.
 Observe that
@@ -63,7 +63,7 @@ Using the fact that all $\E(X_i)$ are equal, we can simplify this to get
 \begin{align*}
   \E(X) = 96\cdot\E(X_1) = \frac{96\cdot3}{8}=36.
 \end{align*}
-\section*{Problem 2}
+\section*{P 2.2}
 Using the binomial distribution we get
 \begin{align*}
   p_n = \binom{2n}{n}\left(\frac{1}{2}\right)^n\left(\frac{1}{2}\right)^n
@@ -94,7 +94,7 @@ Rewriting this into the desired form, we get
   p_n\approx C / n^\alpha = \pi^{-\nicefrac{1}{2}}/n^{\nicefrac{1}{2}}.
 \end{align*}
 So $C=\pi^{-\nicefrac{1}{2}}$ and $\alpha=\nicefrac{1}{2}$.
-\section*{Problem 3}
+\section*{P 2.3}
 Let $X$ be the number of points $A$ scores when playing five more points.
 For the probability of A winning the game in question
 to be $\nicefrac{1}{2}$, we equivalently require
@@ -124,7 +124,7 @@ probability, we get
 \begin{align*}
   p\in \{-0.516..., 0.686..., 1.187...\} \cap [0,1] \Rightarrow p \approx 0.686=68.6\%.
 \end{align*}
-\section*{Problem 4}
+\section*{P 2.4}
 Let there be two players: Alice and Bob. Let Alice be the one to pick
 a coin and let Bob be the one to guess. Then we define the following
 events:
