--- a/2020_21/PRB/H1/week3/homework.tex
+++ b/2020_21/PRB/H1/week3/homework.tex
@@ -39,7 +39,7 @@
 \begin{document}
 \date{13th October, 2020}
 \maketitle
-\section*{Problem 1}
+\section*{P 3.1}
 Let $E$ be the experiment of rolling three D6 and let $X$ be the number of 6s rolled.
 Then let $A$ be the event that $X\geq 1$ and let $B$ be the event that $X=2$. 
 We are interested in $\P(A|B)$. By definition, we find
@@ -62,7 +62,7 @@ Therefore
 \begin{align*}
   \P(A\cap B) = \frac{\P(B)}{\P(A)}= \frac{15/216}{91/216} = \frac{15}{91}.
 \end{align*}
-\section*{Problem 2}
+\section*{P 3.2}
 Let the $X$ be as described in the problem. Let the events
 $A_i$ for $i\in[4,5,6]$ be that a specific D$i$ is chosen.
 Then we can use \emph{the law of total probability} to find
@@ -90,7 +90,7 @@ Inserting the expected values for each D$i$ we find
 \begin{align*}
   \E(X) = \frac{1}{3}\left(\frac{5 + 6 + 7}{2}\right)=3.
 \end{align*}
-\section*{Problem 3}
+\section*{P 3.3}
 Let $X$ be a Bernoulli random variable for the state of the switch described in the
 problem and let $A_i$ be the event that $X=1$ on the $i$th day, i.e. the switch is 
 "on" on that day. Lets consider the transition between two days where $\P(E\to F)$ 
@@ -114,7 +114,7 @@ We can solve for $p$ to find
   p=\frac{1}{3}
 \end{align*}
 which shows that the observation in the question is indeed true.
-\section*{Problem 4}
+\section*{P 3.4}
 Let $A$ be the event that a person has the condition and let $B$ be the event that
 a person gets tested positive. Then we know from \emph{the law of total probability}
 that
