--- a/2020_21/SVCDE/H5/homework.tex
+++ b/2020_21/SVCDE/H5/homework.tex
@@ -36,6 +36,7 @@
 \newcommand{\K}{\mathcal{K}}
 \newcommand{\dv}[1]{\vec #1\, '}
 \renewcommand{\d}[1]{#1'}
+\renewcommand{\t}{\theta}
 \newenvironment{itpars}{\par\itshape}{\par}
 \newenvironment{itquote}{\begin{quote}\itshape}{\end{quote}\ignorespacesafterend}
 \begin{document}
@@ -46,30 +47,31 @@
 \section*{Question 1}
 Observe that we can write the height of the volume $V$ in terms of $x$ and $y$ as 
 \begin{align*}
-  z = \sqrt{x^2 + y^2} .
+  h(x,y) = \sqrt{x^2 + y^2}
 \end{align*}
-Thus we need to integrate over the projection onto the $xy$ plane. We find
+because it is bounded below by $z=0$ and above by $z=\sqrt{x^2 + y^2}$.
+Thus we need to integrate the height over the projection onto the $xy$ plane. We find
 \begin{align*}
-  V = \di_D \sqrt{x^2+y^2}dA
+  V = \di_D h(x,y)dA = \di_D \sqrt{x^2+y^2}dA
 \end{align*}
 with
 \begin{align*}
   D = \{(x,y) : x^2 + y^2 = 2x\}.
 \end{align*}
 We can see that $D$ is the unit circle around the point $(1,0)$. Therefore we can 
-change to polar coordinates with $x=r\cos t$ and $y=r\sin t$ to find
+change to polar coordinates with $x=r\cos\t$ and $y=r\sin\t$ to find
 \begin{align*}
-  V = \int_{-\pi/2}^{\pi/2}\int_0^{2\cos t} r^2\: dr dt.
+  V = \int_{-\pi/2}^{\pi/2}\int_0^{2\cos\t} r^2\: dr\,d\t.
 \end{align*}
-We can simplify a bit by observing that $z(r,t)=z(r,-t)$. This lets us write
+We can simplify a bit by observing that $z(r,\t)=z(r,-\t)$. This lets us write
 \begin{align*}
-  V = 2\int_{0}^{\pi/2}\int_0^{2\cos t} r^2\: dr dt.
+  V = 2\int_{0}^{\pi/2}\int_0^{2\cos \t} r^2\: dr\,d\t.
 \end{align*}
 Solving gives 
 \begin{align*}
-  V &= 2\int_0^{\pi/2}\left[\frac{1}{3}r^3\right]_0^{2\cos t}dt
-  =\frac{16}{3}\int_0^{\pi/2}\cos^3 t\:dt\\
-  &=\frac{16}{3}\left[\sin t - \frac{1}{3}\sin^3 t\right]_0^{\pi/2}
+  V &= 2\int_0^{\pi/2}\left[\frac{1}{3}r^3\right]_0^{2\cos \t}d\t
+  =\frac{16}{3}\int_0^{\pi/2}\cos^3 \t\:d\t\\
+  &=\frac{16}{3}\left[\sin \t - \frac{1}{3}\sin^3 \t\right]_0^{\pi/2}
   =\frac{16}{3}\left(\frac{2}{3}\right) = \frac{32}{9}
 \end{align*}
 as required.
@@ -101,11 +103,12 @@ This may be simplified to
 \begin{align*}
   I_2(x)=\frac{9}{|x|+1}
 \end{align*}
-and so 
+and so, by separating positive and negative $x$ values, 
 \begin{align*}
-  I &= \int_{-1}^2 \frac{9}{|x|+1}\: dx = = \int_{-1}^0 \frac{9}{1-x}\:dx
+  I &= \int_{-1}^2 \frac{9}{|x|+1}\: dx\\
+  &=-\int_{-1}^0 \frac{9}{1-x}\:dx
   + \int_0^2 \frac{9}{1+x}\: dx\\
-  &= 9\left[\ln(1-x)\right]_{-1}^0 - 9\left[\ln(1+x)\right]_0^2\\
+  &=-9\left[\ln(1-x)\right]_{-1}^0 + 9\left[\ln(1+x)\right]_0^2\\
   &=9\ln 2 + 9\ln 3 = 9\ln 6
 \end{align*} 
 as required.
